sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:12: error: not found: value c
    if (c==0){
        ^